@@ -8,6 +8,7 @@
 - add magicload_buffer() [mcuelenaere]
 - added test_foreign.py, plus more test images
 - rewritten tiff writer is about 3 - 4x faster at making pyramids
+- jpg, magick, png, tiff readers now use only 1 fd per input image
 
 6/2/15 started 7.42.3
 - bump version for back-compat ABI change
